@@ -1,3 +1,7 @@
+drkns 02.10.2016 18:45:31 +0200 - build 4804
+
+1. Рефакторинг.
+
 zg 01.10.2016 18:23:05 +0200 - build 4803
 
 1. 0003051: Вызов ECTL_REDRAW из диалога.
